fixed loader overflow

--- a/FrontEnd/file-submission/src/Components/UploadAndShow.css
+++ b/FrontEnd/file-submission/src/Components/UploadAndShow.css
@@ -242,7 +242,8 @@
 }
 
 .quote-container {
-  overflow-y: auto;
+  overflow-y: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
